--- a/frontend/assets/css/index.css
+++ b/frontend/assets/css/index.css
@@ -1,20 +1,20 @@
 :root{
-    --bg-light: #fff;
-    --cardColor-Light: #F6F9FA;
-    --primaryColor-Light:#1EA1F1;
-    --InputColor-Light: #EBEEF0;
-    --textColor-Light: #0F151B;
-    --shyColor-Light: #5B7083;
-    --strokeColor-Light: #d1d1d1;
+    --bg-color: #fff;
+    --cardColor: #F6F9FA;
+    --primaryColor:#1EA1F1;
+    --InputColor: #EBEEF0;
+    --textColor: #0F151B;
+    --shyColor: #5B7083;
+    --strokeColor: #d1d1d1;
 }
 .dark-mode{
-    --bg-Dark: #15202B;
-    --cardColor-Dark: #192834;
-    --primaryColor-Dark: #1EA1F1;
-    --InputColor-Dark: #253441;
-    --textColor-Dark: #FFFFFF;
-    --shyColor-Dark: #8899A6;
-    --strokeColor-Dark: #37454D;
+    --bg-color: #15202B;
+    --cardColor: #192834;
+    --primaryColor: #1EA1F1;
+    --InputColor: #253441;
+    --textColor: #FFFFFF;
+    --shyColor: #8899A6;
+    --strokeColor: #37454D;
 }
 *{
     margin: 0;
@@ -23,7 +23,7 @@
     font-family: "Roboto";
 }
 .container{
-    background: var(--bg-light);
+    background: var(--bg-color);
     width: 100%;
     height: 100vh;
     display: flex;
@@ -44,13 +44,13 @@
 }
 .loginPage h1{
     padding: 20px 0px;
-    color: var(--textColor-Light);
+    color: var(--textColor);
 }
 .loginPage input{
     width: 100%;
-    background: var(--bg-light);
-    color: var(--textColor-Light);
-    border: 1px solid var(--strokeColor-Light);
+    background: var(--bg-color);
+    color: var(--textColor);
+    border: 1px solid var(--strokeColor);
     padding: 15px 20px;
     border-radius: 8px;
     font-size: 16px;
@@ -63,8 +63,8 @@
     width: 100%;
 }
 .loginPage button{
-    background-color: var(--primaryColor-Light);
-    color: var(--textColor-Light);
+    background-color: var(--primaryColor);
+    color: var(--textColor);
     width: 100%;
     border: none;
     padding: 15px 0px;
@@ -84,5 +84,5 @@
     justify-content: space-between;
 }
 .loginLinks a{
-    color: var(--primaryColor-Light);
+    color: var(--primaryColor);
 }
