--- a/frontend/assets/css/sign.css
+++ b/frontend/assets/css/sign.css
@@ -1,20 +1,20 @@
-:root {
-  --bg-light: #fff;
-  --cardColor-Light: #f6f9fa;
-  --primaryColor-Light: #1ea1f1;
-  --InputColor-Light: #ebeef0;
-  --textColor-Light: #0f151b;
-  --shyColor-Light: #5b7083;
-  --strokeColor-Light: #d1d1d1;
+:root{
+  --bg-color: #fff;
+  --cardColor: #F6F9FA;
+  --primaryColor:#1EA1F1;
+  --InputColor: #EBEEF0;
+  --textColor: #0F151B;
+  --shyColor: #5B7083;
+  --strokeColor: #d1d1d1;
 }
-.dark-mode {
-  --bg-Dark: #15202b;
-  --cardColor-Dark: #192834;
-  --primaryColor-Dark: #1ea1f1;
-  --InputColor-Dark: #253441;
-  --textColor-Dark: #ffffff;
-  --shyColor-Dark: #8899a6;
-  --strokeColor-Dark: #37454d;
+.dark-mode{
+  --bg-color: #15202B;
+  --cardColor: #192834;
+  --primaryColor: #1EA1F1;
+  --InputColor: #253441;
+  --textColor: #FFFFFF;
+  --shyColor: #8899A6;
+  --strokeColor: #37454D;
 }
 * {
   margin: 0;
@@ -23,7 +23,7 @@
   font-family: "Roboto";
 }
 .container {
-  background: var(--bg-light);
+  background: var(--bg-color);
   width: 100%;
   height: 100vh;
   display: flex;
@@ -44,21 +44,21 @@
 }
 .signPage h1 {
   padding: 20px 0px;
-  color: var(--textColor-Light);
+  color: var(--textColor);
 }
 .signPage input {
   width: 100%;
-  background: var(--bg-light);
-  color: var(--textColor-Light);
-  border: 1px solid var(--strokeColor-Light);
+  background: var(--bg-color);
+  color: var(--textColor);
+  border: 1px solid var(--strokeColor);
   padding: 15px 20px;
   border-radius: 8px;
   font-size: 16px;
   outline: none;
 }
 .signPage button {
-  background-color: var(--primaryColor-Light);
-  color: var(--textColor-Light);
+  background-color: var(--primaryColor);
+  color: var(--textColor);
   width: 100%;
   border: none;
   padding: 15px 0px;
@@ -75,7 +75,7 @@
   justify-content: space-between;
 }
 .signLinks a {
-  color: var(--primaryColor-Light);
+  color: var(--primaryColor);
 }
 
 .custom-file-label {
@@ -83,12 +83,12 @@
   align-items: center;
   gap: 10px; /* Tugma va fayl nomi orasidagi masofa */
   padding: 10px 15px;
-  color: var(--textColor-Light);
+  color: var(--textColor);
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
   width:100%;
-  border: 1px solid var(--strokeColor-Light); 
+  border: 1px solid var(--strokeColor); 
 }
 
 #error{
@@ -106,12 +106,12 @@
   padding: 3px 0px;
 }
 .file-btn {
-  background-color: var(--primaryColor-Light);
+  background-color: var(--primaryColor);
   padding: 8px 12px;
   border-radius: 5px;
 }
 
 .file-name {
-  color: var(--textColor-Light);
+  color: var(--textColor);
   font-size: 14px;
 }
