--- a/frontend/assets/css/profile.css
+++ b/frontend/assets/css/profile.css
@@ -109,12 +109,11 @@
 
 .more{
     width: 100%;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: start;
     gap: 10px;
     padding: 20px 0px 20px 0px;
-    /* border-bottom:1px solid var(--strokeColor); */
 }
 .logout{
     width: 100%;
