--- a/frontend/assets/css/profile.css
+++ b/frontend/assets/css/profile.css
@@ -181,9 +181,9 @@
     padding: 0px 20px;
 }
 .inputDiv img{
-    /* width: 60px !important;
-    height: 60px !important; */
-    flex: 1;
+    width: 60px !important;
+    height: 60px !important;
+    /* flex: 1; */
     border-radius: 50%;
     border: 1px solid var(--strokeColor);
 }
