--- a/frontend/assets/css/profile.css
+++ b/frontend/assets/css/profile.css
@@ -237,3 +237,11 @@
 .userPostCard p{
     color: var(--shyColor);
 }
+
+/* all user posts  */
+.allUserPosts{
+    width: 100%;
+    padding: 10px 0px;
+    display: none;
+    flex-direction: column;
+}
