--- a/frontend/assets/css/profile.css
+++ b/frontend/assets/css/profile.css
@@ -245,3 +245,17 @@
     display: none;
     flex-direction: column;
 }
+
+.allUsersProfile{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    padding: 10px 0px;
+}
+.allUsersProfile img{ 
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
