--- a/frontend/assets/css/profile.css
+++ b/frontend/assets/css/profile.css
@@ -259,3 +259,14 @@
     height: 50px;
     border-radius: 50%;
 }
+.postInfo{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 30px;
+}
+.fa-heart{
+    color: var(--textColor);
+}
