--- a/frontend/assets/css/profile.css
+++ b/frontend/assets/css/profile.css
@@ -356,6 +356,13 @@
   padding: 20px 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+.secMidCardImg{
+  width:90%;
+  display: flex;
+  flex-direction: row;
   gap: 10px;
 }
 .secMidCard img {
@@ -391,3 +398,13 @@
     border: 1px solid var(--strokeColor);
 }
 
+/* comment like style css */
+
+#commentLikeDiv{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+#commentLikeDiv i{
+  cursor: pointer;
+}
