--- a/frontend/assets/css/profile.css
+++ b/frontend/assets/css/profile.css
@@ -408,3 +408,9 @@
 #commentLikeDiv i{
   cursor: pointer;
 }
+
+/* userFavPostDiv style  */
+.userFavPostDiv{
+  display: none;
+  flex-direction: column;
+}
